src/objects/Case_Severities__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Track Case Sev</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation__c</fullName>
        <label>Installation</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Case Severities</label>
</CustomObject>